--- a/index.html
+++ b/index.html
@@ -22,6 +22,31 @@
         .sources a {
             cursor: pointer;
         }
+        .member-tasks {
+            margin-top: 16px;
+            text-align: left;
+            background: rgba(255, 255, 255, 0.6);
+            padding: 16px 18px;
+            border-radius: 12px;
+            border: 1px solid rgba(74, 111, 165, 0.15);
+            backdrop-filter: blur(8px);
+        }
+
+        .member-tasks p {
+            font-size: 0.9rem;
+            color: var(--color-text-soft);
+            margin: 8px 0;
+            line-height: 1.5;
+            font-weight: 500;
+        }
+
+        .member-tasks p:first-child {
+            margin-top: 0;
+        }
+
+        .member-tasks p:last-child {
+            margin-bottom: 0;
+        }
     </style>
 </head>
 <body class="intro-active">
@@ -64,22 +89,37 @@
             <div class="team-members">
                 <div class="member">
                     <img class="profile-pic" src="https://i.postimg.cc/9MGrSTdh/ytseiung.jpg" alt="Tseng Ping Yung (Bobo)" loading="lazy">
-                    <h3><a class="member-link" href="https://www.ytseiung.me/about" target="_blank" rel="noopener noreferrer">Tseng Ping Yung</a></h3>
-                    <h3>(Bobo)</h3>
+                    <h3><a class="member-link" href="https://www.ytseiung.me/about" target="_blank" rel="noopener noreferrer">Tseng Ping Yung (Bobo)</a></h3>
+                    <div class="member-tasks">
+                        <p>• Project leader</p>
+                        <p>• Data collection and analysis</p>
+                        <p>• Presentation Production</p>
+                    </div>
                 </div>
                 <div class="member">
                     <img class="profile-pic" src="https://i.postimg.cc/2j717Qjd/xzhiyouu.jpg" alt="Hsieh Chih Yu (Nelson)" loading="lazy">
-                    <h3><a class="member-link" href="https://www.xzhiyouu.me/about" target="_blank" rel="noopener noreferrer">Hsieh Chih Yu</a></h3>
-                    <h3>(Nelson)</h3>
+                    <h3><a class="member-link" href="https://www.xzhiyouu.me/about" target="_blank" rel="noopener noreferrer">Hsieh Chih Yu (Nelson)</a></h3>
+                    <div class="member-tasks">
+                        <p>• Website development</p>
+                        <p>• Data collection and analysis</p>
+                        <p>• Presentation Production</p>
+                    </div>
                 </div>
                 <div class="member">
                     <img class="profile-pic" src="https://i.postimg.cc/Vvmdc6gb/image-6.png" alt="Jung Ui Chan (Chan)" loading="lazy">
                     <h3>Jung Ui Chan</h3>
-                    <h3>(Chan)</h3>
+                    <div class="member-tasks">
+                        <p>• Presentation Production</p>
+                        <p>• Research & analysis on South Korean's data</p>
+                    </div>
                 </div>
                 <div class="member">
                     <img class="profile-pic" src="https://i.postimg.cc/Kjf4c2pp/image-5.png" alt="Kim Hee Seung" loading="lazy">
                     <h3>Kim Hee Seung</h3>
+                    <div class="member-tasks">
+                        <p>• Presentation Production</p>
+                        <p>• Research & analysis on South Korean's data</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -102,7 +142,6 @@
             </div>
             <p><strong>Taiwan:</strong> By 2025 more than 20% of the population will be 65+, pushing Taiwan into a super‑aged society and intensifying pressure on labor supply, pensions and long‑term care.</p>
             <p><strong>South Korea:</strong> Fertility fell to 0.72 in 2023 (world’s lowest) and the 65+ share is projected to reach 46.4% by 2070, implying a shrinking workforce and heavier fiscal and care burdens.</p>
-            <p><em>Why compare?</em> Both are advanced East Asian economies facing rapid aging but with different speed and policy responses; contrasting them highlights levers in fertility support, senior labor participation, care systems and immigration.</p>
             <p style="font-size:0.75rem;color:#555;">Sources: NDC (Taiwan), KOSTAT / KOSIS.</p>
         </section>
         
