--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Cheonwan - Aging Societies in Taiwan and South Korea</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://blog.xzhiyouu.me/Cheonwan/script.js" defer></script>
-    <link rel="stylesheet" href="https://blog.xzhiyouu.me/Cheonwan/styles.css">
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
     <style>
         .member-link {
             cursor: pointer;
